# CPT-to-soiltype

./: .gitignore  .pre-commit-config.yaml  LICENSE  Main.py  README.md  pyproject.toml  requirements.txt
data/predict_example/: test_hole_859.csv  test_hole_861.csv
models/: xgb_model.json  xgb_model_3cls.json  xgb_model_3cls.ubj  xgb_model_7cls.json  xgb_model_7cls.ubj
notebooks/: balancing_datasets_imblearn.ipynb  clustering_hdbscan_kmeans.ipynb  dimensionality_reduction_pca_umap.ipynb  eda.ipynb  eda_cpt.ipynb  eda_earthquake.ipynb  experiment_tracking.ipynb  feature_selection_featurewiz.ipynb  hydra_configuration_tutorial.ipynb  hyperparameter_optimisation.ipynb  metrics.ipynb  metrics_and_ml_intro.ipynb  mlflow_experiment_tracking_random_forest.ipynb  permutation_feature_importance.ipynb  plotting_results.ipynb  sklearn_pipelines_geotech.ipynb  training_evaluation.ipynb
notebooks/config/hydra_demo/: main.yaml
notebooks/config/hydra_demo/dataset/: synthetic.yaml
notebooks/config/hydra_demo/model/: logreg.yaml
scripts/: choose_single_drillholes.py  optimise_hyperparameters.py  predict.py  preprocess.py  process.py  select_features.py  train.py
scripts/config/: main.yaml
scripts/config/model/: dummy.yaml  extra_trees.yaml  knn.yaml  logistic_regression.yaml  random_forest.yaml  xgboost_native.yaml
src/cpt_to_soiltype/: feature_selection.py  hyperparameter_optimisation.py  plotting.py  preprocess_funcs.py  schema_config.py  train_eval_funcs.py  utility.py
