[tool.poetry]
name = "cpt-to-soiltype"
version = "0.1.0"
description = "CPT to soiltype prediction"
authors = ["tfh <tom.frode.hansen@ngi.no>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "cpt_to_soiltype", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
ipykernel = "^6.29.5"
ydata-profiling = "^4.12.0"
rich = "^13.9.4"
pyod = "^2.0.2"
hydra-core = "^1.3.2"
pydantic = "^2.9.2"
xgboost = "^2.1.2"
imblearn = "^0.0"
mlflow = "^2.17.2"
optuna = "^4.1.0"
plotly = "^5.24.1"
nbformat = "^5.10.4"
streamlit = "^1.40.1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ipdb = "^0.13.13"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
