[project]
name = "cpt-to-soiltype"
version = "0.1.0"
description = "CPT to soiltype prediction"
authors = [{ name = "tfh", email = "tom.frode.hansen@ngi.no" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11.1"
dependencies = [
    "hydra-core>=1.3.2",
    "imblearn>=0.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.0",
    "mlflow>=3.3.2",
    "nbformat>=5.10.4",
    "optuna>=4.5.0",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pydantic>=2.11.7",
    "pyod>=2.0.5",
    "rich>=14.1.0",
    "scikit-learn>=1.7.2",
    "streamlit>=1.49.1",
    "xgboost>=3.0.5",
    "ydata-profiling>=4.16.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipdb>=0.13.13",
    "isort>=6.0.1",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"